# tcgplayer-python

./: .env  .gitignore  README.md  example.config.ini  requirements.txt  setup.cfg  setup.py
tcgplayer/src/: client.py  helpers.py
tcgplayer/src/api/: __init__.py  base.py  catalog.py  client.py  endpoints.py  helpers.py  inventory.py  pricing.py
tcgplayer/tests/: test_api.py  test_catalog.py  test_client.py  test_helpers.py  test_inventory.py  test_pricing.py
