[metadata]
name = tcgplayer
version = 0.3
url = 'https://github.com/rsfxiii/TCGPlayer-CLI'
author = 'Ryan Ferguson'
author_email = 'ryan@raijinn.xyz'
description = Command-line interface for accessing TCGPLayer Catalog API
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = tcgplayer, gaming, pricing, cli
license = GNU General Public License v3
classifiers = 
    Programming Language :: Python 3.7

[options]
zip_safe = False
namespace_packages = ['tcgplayer']
include_package_data = True
package_dir=
    =tcgplayer
packages=find:
install_requires=
    click
    requests
test_suite = tcgplayer.tests.test_api.TestClient

[options.packages.find]
where=package_dir
