[metadata]
name = tcgplayer
version = 0.3
url = 'https://github.com/rsfxiii/TCGPlayer'
author = 'Ryan Ferguson'
author_email = 'ryan@raijinn.xyz'
description = Python library for accessing TCGPLayer APIs
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = tcgplayer, gaming, pricing
license = GNU General Public License v3
classifiers = 
    Programming Language :: Python 3.7

[options]
zip_safe = False
namespace_packages = ['tcgplayer']
include_package_data = True
package_dir=
    =tcgplayer
packages=find:
install_requires=
    requests
# TODO: Make test_suite more generalized by adding more tests
test_suite = tcgplayer.tests.test_client.TestClient

[options.packages.find]
where=package_dir
